refactor(author): enhance author data retrieval with Tuple projection and sync completion check